# knowledge-base

./: CHANGELOG.md  README.md  TODO.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest-setup.ts
.github/workflows/: ci.yaml
src/: index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  states.rs
src-tauri/src/command/: commands.rs  event.rs  mod.rs
src-tauri/src/langchian/: langchian.rs  memory.rs  mod.rs
src-tauri/src/llm/: memory.rs  mod.rs  prompt.rs
src-tauri/src/model/: chat.rs  knowledge_base.rs  mod.rs  model.rs
src-tauri/src/service/: chat.rs  mod.rs  model.rs
src-tauri/src/sql/: migration.rs
src-tauri/vector-database/: Cargo.toml
src-tauri/vector-database/src/: lib.rs
src/api/: api.ts  chat.ts  dataset.ts  index.ts  knowledge_base.ts  model.ts  model_provider.ts  preference.ts
src/api/builder/: database.ts  query_builder.ts
src/api/builder/__tests__/: query_builder.test.ts
src/components/: WrapChatContext.tsx  basicPageWrapper.tsx  navigations.tsx
src/components/basic/: animated_title.tsx  index.d.ts
src/components/basic/badge/: badge.tsx
src/components/basic/button/: button.tsx
src/components/basic/form/: Input.tsx  form.tsx  form_item.tsx  form_store.ts  interface.ts
src/components/basic/modal/: modal.css  modal.tsx
src/components/basic/stepper/: stepper.tsx
src/components/basic/table/: table.module.css  table.tsx
src/components/chat/: ChatCard.tsx  ChatContext.tsx  ChatContextProvider.tsx  ChatInput.tsx  ChatLoader.tsx  ChatPanel.tsx  ChatSegment.tsx  ChatSendButton.tsx  ChatSettings.tsx
src/components/chat-card/: ChatCard.tsx
src/components/chat-input/: ChatInput.tsx
src/components/document-card/: DocumentCard.tsx
src/components/expanded-card/: ExpandedCard.module.css  ExpandedCard.tsx
src/components/preference/: Preference.tsx  PreferenceLoader.tsx  PreferenceSegment.tsx
src/components/settings/: ModelSettingSidebar.tsx  ModelSettings.tsx
src/hooks/: useChatHelper.ts  useCopyToClipboard.ts  usePreference.ts  useQuery.ts
src/model/: api.ts  chat.ts  dataset.ts  index.ts  knowledge_base.ts  preference.ts
src/package/api/: api.ts  chat.ts  chat_history.ts  chat_settings.ts  dataset.ts  index.ts  knowledge_base.ts  model.ts  model_provider.ts  preference.ts
src/package/assistant/: index.ts  prompt.ts  provider.ts  vector_store.ts
src/package/model-provider/: qwen.ts  siliconflow.ts
src/pages/: basic_page_wrapper.tsx  chat_page.tsx  chats.tsx  datasets.tsx  knowledge_base.tsx  knowledge_base_detail.tsx  knowledge_base_import.tsx  root.tsx  settings.tsx
src/routes/: chat_page.tsx  chats.tsx  datasets.tsx  knowledge_base.tsx  knowledge_base_detail.tsx  knowledge_base_import.tsx  preferences.tsx  root.tsx  routes.tsx  settings.tsx
src/service/: dataset.ts  knowledge_base.ts  model.ts
src/store/: chat.ts  preference.ts
src/utils/: chat.ts  constant.ts  utils.ts
(+24 files in other folders)
