[package]
name = "knowledge-keeper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [
    "vector-database"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "knowledge_keeper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25.0"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-beta"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vector-database = {path = "vector-database"}

