[package]
name = "knowledge-keeper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

#[workspace]
#members = [
#    "vector-database"
#]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "knowledge_keeper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25.0"

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-sql = {version = "2.2.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

langchain-rust = { version = "4.6.0", features = ["ollama", "sqlite-vec"] }
libsqlite3-sys = "0.28.0"
sqlite-vec = "0.1.1"
uuid = { version = "1.10.0", features = ["v4"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
futures = "0.3.30"
tokio = "1.40.0"

[patch.crates-io]
langchain-rust = { git = "https://github.com/return764/langchain-rust", branch = "support-sqlite-filter" }

